<resources>
    <string name="app_name">فروشگاه اینترنتی</string>
    <string name="slogan">بهترین خرید زندگیت رو با ما تجربه کن</string>
    <string name="web_site">www.morteza.kalaateh.com</string>
    <string name="title_no_internet">اتصال شما به اینترنت قطع شده است</string>
    <string name="description_no_internet">برای استفاده از این اپلیکیشن نیاز به اینترنت دارید. لطفا دستگاه خود را به اینترنت وصل کنید</string>
    <string name="connect_to_wifi">اتصال به وای فای</string>
    <string name="connect_to_mobile_data">اتصال به دیتای موبایل</string>

    <string name="login">ورود</string>
    <string name="hint_username">ایمیل خود را وارد نمایید</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="hint_password">رمز عبور خود را وارد کنید</string>
    <string name="create_account">حساب کاربری ندارید؟ ثبت نام کنید</string>
    <string name="forget_password">فراموشی کلمه عبور</string>
    <string name="sign_up">ثبت نام</string>
    <string name="email_signup">ایمیل</string>
    <string name="confirm_password">ثبت رمز عبور</string>
    <string name="hint_confirm_password">رمز عبور خود را دوباره وارد نمایید</string>
    <string name="verification_get_email">دریافت رمز یک بار مصرف</string>
    <string name="verify_code">تایید کد</string>
    <string name="verification_code">کد تایید شده</string>
    <string name="hint_verification_code">کد تاییدیه را وارد نمایید</string>
    <string name="user_home">پروفایل</string>
    <string name="shopping_home">سبد خرید</string>
    <string name="category_home">دسته بندی</string>
    <string name="home_home">خانه</string>

</resources>