<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".Activity.SignUp.SignUpActivity">

    <TextView
        android:id="@+id/tv_title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_email_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/email_signup"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_signup" />

    <EditText
        android:id="@+id/et_input_email_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/margin_13dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shape_edittext_stroke"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email_signup"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tv_title_password_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_email_signup" />

    <EditText
        android:id="@+id/et_input_password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/margin_13dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shape_edittext_stroke"
        android:gravity="right"
        android:hint="@string/hint_password"
        android:inputType="text"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password_signup"
        app:layout_constraintWidth_percent="0.8" />


    <TextView
        android:id="@+id/tv_title_confirm_password_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_password_signup" />

    <EditText
        android:id="@+id/et_input_confirm_password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/margin_13dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shape_edittext_stroke"
        android:gravity="right"
        android:hint="@string/hint_confirm_password"
        android:inputType="text"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_confirm_password_signup"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:background="@drawable/shape_rect_gold"
        android:text="@string/sign_up"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_confirm_password_signup"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>