<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root_no_internet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/dark_background"
    android:paddingBottom="@dimen/padding_10dp"
    tools:context=".Dialog.NoInternet.NoInternetActivity">

    <ImageView
        android:id="@+id/iv_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_13dp"
        android:src="@drawable/ic_no_internet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_13dp"
        android:text="@string/title_no_internet"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/iv_no_internet"
        app:layout_constraintRight_toRightOf="@+id/iv_no_internet"
        app:layout_constraintTop_toBottomOf="@id/iv_no_internet" />

    <TextView
        android:id="@+id/tv_description_no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_13dp"
        android:layout_marginTop="@dimen/margin_13dp"
        android:layout_marginRight="@dimen/margin_13dp"
        android:gravity="center"
        android:text="@string/description_no_internet"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tv_title_no_internet"
        app:layout_constraintRight_toRightOf="@id/tv_title_no_internet"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_no_internet" />

    <Button
        android:id="@+id/btn_wifi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15dp"
        android:background="@drawable/shape_connect_to_internet"
        android:text="@string/connect_to_wifi"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@id/tv_description_no_internet"
        app:layout_constraintTop_toBottomOf="@id/tv_description_no_internet"
        app:layout_constraintWidth_percent="0.4" />


    <Button
        android:id="@+id/btn_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15dp"
        android:background="@drawable/shape_connect_to_internet"
        android:text="@string/connect_to_mobile_data"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tv_description_no_internet"
        app:layout_constraintTop_toBottomOf="@id/tv_description_no_internet"
        app:layout_constraintWidth_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>