<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".ForgetPassword.GetEmail.ForgetPasswordGetEmailActivity">


    <TextView
        android:id="@+id/tv_title_getEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/email_signup"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />
    <EditText
        android:id="@+id/et_input_getEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/margin_13dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shape_edittext_stroke"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_getEmail"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btn_getEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:background="@drawable/shape_rect_gold"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:text="@string/verification_get_email"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_getEmail"
        app:layout_constraintWidth_percent="0.4" />




</androidx.constraintlayout.widget.ConstraintLayout>