<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_background"
    android:orientation="horizontal"
    android:weightSum="4">

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user_white"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_3dp"/>
            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="13sp"
                android:text="@string/user_home"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_shopping"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_white"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_3dp"/>
            <TextView
                android:id="@+id/tv_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="13sp"
                android:text="@string/shopping_home"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_category_white"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_3dp"/>
            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="13sp"
                android:text="@string/category_home"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_white"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_3dp"/>
            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="13sp"
                android:text="@string/home_home"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />

        </LinearLayout>

</LinearLayout>