<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".ForgetPassword.GetPassword.ForgetPasswordCreateNewPasswordActivity">

    <View
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/v_space_for_ui"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"/>

    <TextView
        android:id="@+id/tv_title_create_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/v_space_for_ui"
        app:layout_constraintRight_toRightOf="parent"
         />

    <EditText
        android:id="@+id/et_input_create_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/margin_13dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shape_edittext_stroke"
        android:hint="@string/hint_password"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_create_new_password"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tv_title_confirm_input_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/margin_13dp"
        android:layout_marginRight="@dimen/margin_25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_create_new_password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_input_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginEnd="@dimen/margin_25dp"
        android:background="@drawable/shape_edittext_stroke"
        android:hint="@string/hint_confirm_password"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_confirm_input_new_password"
        app:layout_constraintWidth_percent="0.8"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/btn_verify_new_password"
        android:layout_width="0.dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:background="@drawable/shape_rect_gold"
        app:layout_constraintHeight_percent="0.4"
        android:text="@string/confirm_password"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_confirm_new_password"
        app:layout_constraintWidth_percent="0.4" />





</androidx.constraintlayout.widget.ConstraintLayout>

